fix:gap

--- a/src/components/CatalogBlock/CatalogBlock.module.scss
+++ b/src/components/CatalogBlock/CatalogBlock.module.scss
@@ -1,10 +1,14 @@
-.wrapper{
+.wrapper {
   margin-top: 35px;
 }
 
 .c_card_wrapper {
   display: grid;
   gap: 30px;
+
+  @media (max-width:768px) {
+    gap: 10px;
+  }
 }
 
 .grid_three {
@@ -22,19 +26,18 @@
     margin-top: 30px;
   }
 
-  .grid__wrap{
+  .grid__wrap {
     display: flex;
     flex-direction: column-reverse;
   }
-  
+
   .grid_two {
     grid-template-columns: repeat(2, 1fr);
     padding-top: 30px;
   }
 
-  .grid__cont{
+  .grid__cont {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
   }
 }
-
